# grvcQuadrotor

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  action__client_8h.html  action__client_8h_source.html  action__server_8h.html  action__server_8h_source.html  actions_8cpp.html  actions_8cpp.js  actions_8cpp_source.html  annotated.html  annotated_dup.js  back__end_8cpp.html  back__end_8cpp_source.html  back__end_8h.html  back__end_8h_source.html  back__end__gazebo_8cpp.html  back__end__gazebo_8cpp_source.html  back__end__gazebo_8h.html  back__end__gazebo_8h_source.html  class_mock_publisher_b_e-members.html  class_mock_publisher_b_e.html  class_mock_publisher_b_e.js  class_mock_subscriber_b_e-members.html  class_mock_subscriber_b_e.html  class_mock_subscriber_b_e.js  classes.html  classgazebo_1_1_gazebo_quadrotor_simple_controller-members.html  classgazebo_1_1_gazebo_quadrotor_simple_controller.html  classgazebo_1_1_gazebo_quadrotor_simple_controller.js  classgrvc_1_1com_1_1_action_client-members.html  classgrvc_1_1com_1_1_action_client.html  classgrvc_1_1com_1_1_action_client.js  (+211 more)
com/: CMakeLists.txt  package.xml
com/include/grvc_com/: action_client.h  action_server.h  publisher.h  publisher_back_end.h  publisher_back_end_ros.h  subscriber.h  subscriber_back_end.h  subscriber_back_end_ros.h
com/include/grvc_com/ros/: publisher_back_end_ros.h  ros_singleton.h  subscriber_back_end_ros.h
com/src/: action_client.cpp  publisher_back_end.cpp  publisher_back_end_ros.cpp  subscriber_back_end.cpp  subscriber_back_end_ros.cpp
com/src/ros/: publisher_back_end_ros.cpp  ros_singleton.cpp  subscriber_back_end_ros.cpp
com/test/: CMakeLists.txt  actions.cpp  parse.cpp  serialize.cpp
hal/: CMakeLists.txt  package.xml
hal/include/grvc_quadrotor_hal/: server.h  types.h
hal/include/grvc_quadrotor_hal/back_end/: back_end.h  back_end_gazebo.h  back_end_mavros.h  pid_controller.h
hal/include/hal_client/: client.h  client_ros.h  hal_client.h
hal/include/hal_common/: types.h
hal/include/hal_server/: hal_server.h  server.h
hal/include/hal_server/back_end/: back_end.h  back_end_gazebo.h  pid_controller.h
hal/include/hal_server/service/: service.h  service_ros.h
hal/launch/: spawn_quad_gazebo.launch  test_simulator.launch
hal/msg/: command.msg
hal/src/client/: client.cpp  client_ros.cpp  hal_client.cpp
hal/src/node/: main.cpp
hal/src/server/: hal_server.cpp  server.cpp
hal/src/server/back_end/: back_end.cpp  back_end_gazebo.cpp  back_end_mavros.cpp  pid_controller.cpp
hal/src/server/service/: service.cpp  service_ros.cpp
hal/test/: CMakeLists.txt  server_test.cpp
hal/urdf/: grvc_quadrotor.urdf.xacro  grvc_quadrotor_base.urdf.xacro
samples/gazebo_sample/: CMakeLists.txt  package.xml
samples/gazebo_sample/launch/: test_hal_gazebo.launch
samples/gazebo_sample/src/: main.cpp
samples/hal_sample/: CMakeLists.txt  package.xml
samples/hal_sample/launch/: test_hal_gazebo.launch
samples/hal_sample/src/: main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+24 more)
simulation/grvc_quadrotor_control/: CMakeLists.txt  package.xml
simulation/grvc_quadrotor_control/include/grvc_quadrotor_control/: control.h  model.h  state.h
simulation/grvc_quadrotor_control/launch/: spawn_quad.launch  test_simulator.launch
simulation/grvc_quadrotor_control/src/: control.cpp  main.cpp  model.cpp
simulation/grvc_quadrotor_gazebo/: CMakeLists.txt  package.xml
simulation/grvc_quadrotor_gazebo/include/grvc_quadrotor_gazebo/: quadrotor_simple_controller.h
simulation/grvc_quadrotor_gazebo/launch/: spawn_quad.launch  test_simulator.launch
simulation/grvc_quadrotor_gazebo/model/: grvc_quad_simplified.stl
simulation/grvc_quadrotor_gazebo/src/: quadrotor_simple_controller.cpp
simulation/grvc_quadrotor_gazebo/urdf/: grvc_quadrotor.urdf.xacro  grvc_quadrotor_base.urdf.xacro
simulation/hector_quadrotor_gazebo_plugins/: CMakeLists.txt  package.xml
simulation/hector_quadrotor_gazebo_plugins/launch/: test_simulator.launch
simulation/hector_quadrotor_gazebo_plugins/src/: quadrotor_simple_controller.cpp
simulation/hector_quadrotor_gazebo_plugins/urdf/: quadrotor_plugins.urdf.xacro  quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.urdf.xacro
uav/: CMakeLists.txt  package.xml
uav/client/: uav_client.cpp  uav_client.h
uav/include/uav_client/: client.h  uav_client.h
uav/include/uav_common/: types.h
uav/include/uav_server/: server.h
uav/include/uav_server/service/: service.h  service_ros.h
uav/server/: uav_server.h
uav/server/service/: uav_service.h  uav_service_ros.h
uav/src/: main.cpp  uav_server.h
uav/src/client/: client.cpp
uav/src/server/: server.cpp
uav/src/service/: uav_service.h  uav_service_ros.h
