<package>
	<name>grvc_quadrotor_hal</name>
	<version>1.0.0</version>
	<description>
		This package provides a low level interface to a uav platform.
	</description>
	<maintainer email="todo@todo.com">GRVC University of Seville</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rosscpp</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>rosscpp</run_depend>
	<run_depend>message_runtime</run_depend>
</package>