<package>
	<name>grvc_quadrotor_uav</name>
	<version>1.0.0</version>
	<description>
		This package provides a high level interface to a uav platform.
	</description>
	<maintainer email="todo@todo.com">GRVC University of Seville</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>

	<run_depend>roscpp</run_depend>
</package>