<package>
	<name>grvc_quadrotor_gazebo_sample</name>
	<version>1.0.0</version>
	<description>
		Sample illustrating simple use of gazebo plugin
	</description>
	<maintainer email="todo@todo.com">GRVC University of Seville</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>gazebo_ros</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>gazebo_ros</run_depend>
</package>